--- a/index.html
+++ b/index.html
@@ -4,9 +4,85 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>New Year New Mission</title>
+    <link rel="stylesheet" href="styles/portfolio.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="banner">
+
+            <!-- <img src="images/banner/banner1.png" alt=""> -->
+            <div class="title-des">
+                <div>
+
+                </div>
+                <div class="title-des2">
+                    <h2 class="nav-title">All Things Are Possible If You Believe</h2>
+                    <p class="p-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                    <button class="btn-primary">Contact Us</button>
+                </div>
+        </div>
+    </header>
+
+    <!-- header banner -->
+    </div>
+    <main>
+        <section>
+           <div class="failure">
+           <div>
+            <img src="images/person.png" alt="">
+           </div>
+            <div class="failure-des">
+                <h2 class="failure-title">My failures of previous year</h2>
+                <p class="failure-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+            </div>
+           </div>
+        </section>
+        <section class="what-i-do">
+            <h3 class="my-plans">My Plans</h3>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/web.png" alt="">
+                    <p class="skill-title">Web Development</p>
+                    <p class="skill-description">I want to start</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Java Script</p>
+                    <p class="skill-description">I want to learn</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/smoke.png" alt="">
+                    <p class="skill-title">Smoking Habit</p>
+                    <p class="skill-description">I want to end</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/ecom.png" alt="">
+                    <p class="skill-title">E-commerce</p>
+                    <p class="skill-description">I want to develop</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- contact section -->
+        <section class="contact">
+            <div>
+                <h3 class="section-title">Future</h3>
+                <p class="section-title">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <h5 class="section-title">Email : info@gmail.com</h5>
+                <h5 class="section-title">Phone : 01500 00 00 00</h5>
+                <a href=""></a>
+                <img src="images/icons/fb.png" alt="">
+                <img src="images/icons/twitter.png" alt="">
+                <img src="images/icons/youtube.png" alt="">
+            </div>
+            <div>
+                <h3 class="section-title">Subscribe</h3>
+            </div>
+        </section>
+    </main>
+    <footer>
+    </footer>
 </body>
 </html>
